# Hoed

./: .gitignore  .travis.yml  Hoed.cabal  LICENSE  README.md  build  changelog  configure  configure.Demo  configure.Generic  configure.Profiling  configure.Prop  configure.Pure  configure.Stk  installDependencies  mktags  run  stack.yaml  test  test.Generic  test.Prop  test.Pure  test.Stk
Data/: Frame.hs  Indexable.hs
Data/Rope/: Mutable.hs
Data/Rope/Mutable/: Spec.hs
Debug/: Hoed.hs  NoHoed.hs
Debug/Hoed/: CompTree.hs  Compat.hs  Console.hs  DebugTree.lhs  DemoGUI.hs  EventForest.hs  Fields.hs  NoTrace.hs  Observe.lhs  Prop.hs  Pure.hs  ReadLine.hs  Render.hs  Serialize.hs  Span.hs  Stk.hs  TH.hs  TestParEq.hs  Util.hs
Debug/Hoed/Pure/: CompTree.hs  Console.hs  DataDep.hs  DemoGUI.hs  EventForest.hs  Observe.lhs  Prop.hs  ReadLine.hs  Render.hs  Serialize.hs  TH.hs  TestParEq.hs
Debug/Hoed/Stk/: DemoGUI.hs  Observe.lhs  Render.hs
Text/PrettyPrint/: FPretty.hs
examples/: AskName-hood.hs  AskName.hs  DoublingServer.hs  DoublingServer2.hs  DoublingServer3.hs  DoublingServer4.hs  DoublingServer5.hs  Example1.hs  Example3.lhs  Example4.hs  Flip.hs  Foldl.hs  Hashmap.hs  HeadOnEmpty.hs  HeadOnEmpty2.hs  IOException.hs  IndirectRecursion.lhs  Insertion_Sort_elements_disappear.hs  Insort.lhs  Insort2.hs  Parity.hs  Pretty.hs  Responsibility.lhs  Rot13.hs  Salary.hs  SimpleHO.hs  SternBrocot.lhs  TightRope.hs  TightRope2.hs  TightRope3.hs  quicksort.hs
examples/BreadthFirst/: BreadthFirst1Defective.hs  BreadthFirst2Defective.hs  BreadthFirst2Sound.hs
examples/CNF_unsound_demorgan__with_properties/: CNF.hs  Main.hs
examples/Digraph_not_data_invariant__with_properties/: Main.hs
examples/ExpressionSimplifier/: Main1.hs  Main2.hs  MyModule.hs
examples/FPretty/: FPretty.hs  Main.hs
examples/FPretty__CC/: FPretty.hs  Main.hs  Sequence.hs
examples/Nubsort/: Main.hs  Nubsort.hs
examples/Queens.hoed-stk/: Main.hs  build  run
examples/Queens__with_properties/: Main.hs  Main2.hs  Properties.hs  Queens.hs  SanityCheck.hs  Test1.hs  Types.hs
examples/Raincat/: LICENSE  README.md  Raincat.cabal
examples/Raincat/.Hoed/: debugTree.dot
examples/Raincat/data/levels/movement1/: movement1.lvl
examples/Raincat/data/levels/movement2/: movement2.lvl
examples/Raincat/data/levels/pinball/: pinball.lvl
examples/Raincat/data/levels/pool/: pool.lvl
examples/Raincat/data/levels/rift/: rift.lvl
examples/Raincat/data/levels/river/: river.lvl
examples/Raincat/data/levels/skyline/: skyline.lvl
examples/Raincat/data/levels/water1/: water1.lvl
examples/Raincat/data/levels/water2/: water2.lvl
examples/Raincat/src/: Main.hs
examples/Raincat/src/Cat/: Cat.hs
examples/Raincat/src/Error/: Error.hs
examples/Raincat/src/Game/: GameGraphics.hs  GameInit.hs  GameInput.hs  GameMain.hs  GameState.hs
examples/Raincat/src/Input/: InputState.hs
examples/Raincat/src/Items/: ItemEffects.hs  Items.hs
examples/Raincat/src/Level/: EndMarker.hs  FireHydrant.hs  Level.hs
examples/Raincat/src/Menu/: Menu.hs  PostVictory.hs
examples/Raincat/src/Nxt/: Audio.hs  Graphics.hs  Input.hs  Types.hs
examples/Raincat/src/Panels/: ItemPanel.hs  MainPanel.hs  MessagePanel.hs
examples/Raincat/src/Program/: Program.hs
examples/Raincat/src/Rain/: Rain.hs
examples/Raincat/src/Settings/: CatSettings.hs  DisplaySettings.hs  Path.hs  RainSettings.hs  UISettings.hs  WorldSettings.hs
examples/Raincat/src/UI/: ItemPanel.hs
examples/Raincat/src/World/: World.hs
examples/SternBrocot1/: SternBrocot.hs
examples/SternBrocot2/: SternBrocot.hs  build
examples/XMonad2__using_properties/: Main.hs  Properties.hs
examples/XMonad2__using_properties/.Hoed/: Events  debugTree.dot  savedCompTree.prop_greedyView_idem  savedCompTree.prop_view_I  savedTrace.prop_greedyView_idem  savedTrace.prop_greedyView_reversible
examples/XMonad2__using_properties/XMonad/: StackSet.hs
examples/XMonad3__using_properties/: Main.hs  Properties.hs  README
examples/XMonad3__using_properties/.Hoed/: Events  debugTree.dot  savedCompTree.prop_shift_win_I  savedCompTree.prop_swap_all_r  savedCompTree.prop_swap_master_I  savedTrace.prop_shift_win_I  savedTrace.prop_swap_all_r  savedTrace.prop_swap_master_idempotent
examples/XMonad3__using_properties/XMonad/: StackSet.hs
examples/XMonad4__using_properties/: Main.hs  Properties.hs
examples/XMonad5__using_properties/: Main.hs
examples/XMonad6__using_properties/: Main.hs  Properties.hs
examples/XMonad_changing_focus_duplicates_windows/: Main.hs
examples/XMonad_changing_focus_duplicates_windows__CC/: Main.hs  Properties.hs  README
examples/XMonad_changing_focus_duplicates_windows__test_only/: Main.hs  Properties.hs
examples/XMonad_changing_focus_duplicates_windows__using_properties/: Main.hs  Properties.hs
examples/ZLang/1/: .gitignore  IR.hs  (+6 more)
examples/filter__with_properties/: Even.hs  Main.hs  Properties.hs
tests/: DoublingServer.hs  Example1.hs  Example3.lhs  Example4.hs  IndirectRecursion.lhs  Insort2.hs
tests/Generic/: r0.hs  r1.hs  r2.hs  r3.hs  t0.hs  t1.hs  t2.hs  t3.hs  t64.hs
tests/Pure/: t1.hs  t2.hs  t3.hs  t4.hs  t5.hs  t6.hs  t7.hs
tests/Stk/: DoublingServer.hs  Example1.hs  Example3.lhs  Example4.hs  IndirectRecursion.lhs  Insort2.hs
tests/TH/: quicksort.hs
tests/ref/: hoed-tests-DoublingServer.graph  hoed-tests-Example1.graph  hoed-tests-Example3.graph  hoed-tests-Example4.graph  hoed-tests-IndirectRecursion.graph  hoed-tests-Insort2.graph  hoed-tests-Prop-t0.graph  hoed-tests-Prop-t1.graph  hoed-tests-Prop-t2.graph  hoed-tests-Prop-t3.graph  hoed-tests-Prop-t4.graph  hoed-tests-Prop-t5.graph  hoed-tests-Pure-t1.graph  hoed-tests-Pure-t2.graph  hoed-tests-Pure-t3.graph  hoed-tests-Pure-t4.graph  hoed-tests-Pure-t5.graph  hoed-tests-Pure-t6.graph  hoed-tests-Pure-t7.graph  hoed-tests-Stk-DoublingServer.graph  hoed-tests-Stk-Example1.graph  hoed-tests-Stk-Example3.graph  hoed-tests-Stk-Example4.graph  hoed-tests-Stk-IndirectRecursion.graph  hoed-tests-Stk-Insort2.graph  hoed-tests-th-quicksort.graph
tests/unit/: Main.hs
(+140 files in other folders)
