name:                Hoed
version:             0.4.0
synopsis:            Lightweight algorithmic debugging.
description:
    Hoed is a tracer and debugger for the programming language Haskell.
    .
    To locate a defect with Hoed you annotate suspected functions and compile as usual. Then you run your program, information about the annotated functions is collected. Finally you connect to a debugging session using a webbrowser.
    .
homepage:            https://wiki.haskell.org/Hoed
license:             BSD3
license-file:        LICENSE
author:              Maarten Faddegon
maintainer:          hoed@maartenfaddegon.nl
copyright:           (c) 2000 Andy Gill, (c) 2010 University of Kansas, (c) 2013-2017 Maarten Faddegon
category:            Debug, Trace
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  changelog, README.md, configure.Demo, configure.Generic, configure.Profiling, configure.Prop, configure.Pure, run, test.Generic, test.Pure
data-files:          img/*.png, img/*.gif

source-repository head
  type:     git
  location: https://github.com/MaartenFaddegon/Hoed.git

library
  exposed-modules:     Debug.Hoed
                       , Debug.NoHoed
  other-modules:       Debug.Hoed.Observe
                       , Debug.Hoed.EventForest
                       , Debug.Hoed.CompTree
                       , Debug.Hoed.Render
                       , Debug.Hoed.ReadLine
                       , Debug.Hoed.Console
                       , Debug.Hoed.Prop
                       , Debug.Hoed.Serialize
                       , Text.PrettyPrint.FPretty
                       , Paths_Hoed
  build-depends:       base >= 4 && <5
                       , array, containers
                       , process
                       , filepath
                       , libgraph == 1.14
                       , regex-posix
                       , mtl
                       , directory
                       , cereal, bytestring
                       , time
  default-language:    Haskell2010
