name:                Hoed
version:             0.5.0
synopsis:            Lightweight algorithmic debugging.
description:
    Hoed is a tracer and debugger for the programming language Haskell.
    .
    To locate a defect with Hoed you annotate suspected functions and compile as usual. Then you run your program, information about the annotated functions is collected. Finally you connect to a debugging session.
    .
homepage:            https://github.com/MaartenFaddegon/Hoed
license:             BSD3
license-file:        LICENSE
author:              Maarten Faddegon
maintainer:          hoed@maartenfaddegon.nl
copyright:           (c) 2000 Andy Gill, (c) 2010 University of Kansas, (c) 2013-2018 Maarten Faddegon
category:            Debug, Trace
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  changelog, README.md, configure.Demo, configure.Generic, configure.Profiling, configure.Prop, configure.Pure, run, test.Generic, test.Pure, tests/ref/*.graph 

source-repository head
  type:     git
  location: https://github.com/MaartenFaddegon/Hoed.git

library
  exposed-modules:     Debug.Hoed.Observe
                       , Debug.Hoed
                       , Debug.Hoed.TH
                       , Debug.NoHoed
                       , Debug.Hoed.CompTree
                       , Debug.Hoed.Render
  other-modules:       Debug.Hoed.Compat
                       , Debug.Hoed.EventForest
                       , Debug.Hoed.ReadLine
                       , Debug.Hoed.Console
                       , Debug.Hoed.Fields
                       , Debug.Hoed.Prop
                       , Debug.Hoed.Serialize
                       , Debug.Hoed.Span
                       , Debug.Hoed.Util
                       , Data.Rope.Mutable
                       , Text.PrettyPrint.FPretty
                       , Paths_Hoed
  build-depends:       base >= 4 && <5
                       , array, containers
                       , clock
                       , deepseq
                       , process
                       , libgraph == 1.14
                       , regex-tdfa
                       , regex-tdfa-text
                       , directory
                       , bytestring
                       , cereal, cereal-text, cereal-vector
                       , hashable >= 1.2.5
                       , hashtables
                       , QuickCheck
                       , open-browser
                       , primitive
                       , semigroups
                       , strict
                       , template-haskell
                       , terminal-size
                       , text
                       , transformers
                       , uniplate
                       , vector
                       , vector-th-unbox
  default-language:    Haskell2010

Test-Suite test-queens
  type:             exitcode-stdio-1.0
  hs-source-dirs:   examples/Queens__with_properties/
  main-is:          Test1.hs
  other-modules:    Properties, Queens, Types
  build-depends:    base >= 4 && <5
                    , QuickCheck
                    , Hoed
  default-language: Haskell2010
  ghc-options:         -rtsopts

Test-Suite test-1
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests/Pure/
  main-is:          t1.hs
  build-depends:    base >= 4 && <5, QuickCheck, Hoed, process
  default-language: Haskell2010

Test-Suite test-2
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests/Pure/
  main-is:          t2.hs
  build-depends:    base >= 4 && <5, QuickCheck, Hoed, process
  default-language: Haskell2010

Test-Suite test-3
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests/Pure/
  main-is:          t3.hs
  build-depends:    base >= 4 && <5, QuickCheck, Hoed, process
  default-language: Haskell2010

Test-Suite test-4
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests/Pure/
  main-is:          t4.hs
  build-depends:    base >= 4 && <5, QuickCheck, Hoed, process
  default-language: Haskell2010

Test-Suite test-5
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests/Pure/
  main-is:          t5.hs
  build-depends:    base >= 4 && <5, QuickCheck, Hoed, process
  default-language: Haskell2010

Test-Suite test-6
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests/Pure/
  main-is:          t6.hs
  build-depends:    base >= 4 && <5, QuickCheck, Hoed, process
  default-language: Haskell2010

Test-Suite test-7
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests/Pure/
  main-is:          t7.hs
  build-depends:    base >= 4 && <5, QuickCheck, Hoed, process
  default-language: Haskell2010

Test-Suite test-th
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests/TH
  main-is:          quicksort.hs
  build-depends:    base >= 4 && <5, QuickCheck, Hoed, process
  default-language: Haskell2010
